[package]
name = "solana-nft-claim-tokens"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.4"
thiserror = "1.0.21"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.1"
spl-token-metadata = "0.0.1"

[lib]
crate-type = ["cdylib", "lib"]
